--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileNFCHandler">
+        <activity android:name=".ui.showCards.ShowCardsActivity"></activity>
+        <activity android:name=".ui.addCards.AddCardActivity" />
+        <activity android:name=".ui.main_menu.MainMenuActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
