--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mobile_nfc_handler">
+
     <uses-permission android:name="android.permission.NFC" />
 
     <application
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileNFCHandler">
-        <activity android:name=".ui.register.RegisterActivity"></activity>
+        <activity android:name=".ui.retrivePassword.ForgotPasswordActivity"></activity>
+        <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.showCards.ShowCardsActivity" />
         <activity android:name=".ui.addCards.AddCardActivity" />
         <activity android:name=".ui.main_menu.MainMenuActivity" />
