--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileNFCHandler">
-        <activity android:name=".ui.retrivePassword.ForgotPasswordActivity"></activity>
+        <activity android:name=".ui.retrivePassword.ForgotPasswordActivity" />
         <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.showNFC.ShowNFCActivity" />
         <activity android:name=".ui.addNFC.AddNFCActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.main_menu.MainMenuActivity" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".main.StartingScreenActivity">
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
