--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name=".ui.retrivePassword.ForgotPasswordActivity" />
         <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.showNFC.ShowNFCActivity" />
-        <activity android:name=".ui.addNFC.AddNFCActivity" />
+        <activity android:name=".ui.nfcUNUSED.AddNFCActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.main_menu.MainMenuActivity" />
         <activity android:name=".main.StartingScreenActivity">
